fix z-index on .input-field for mobile nav

--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,7 @@ textarea{
 
 .input-field{
   position: relative;
+  z-index: -100;
 }
 
 .input-field label{
